# myduolingo

./: .env  .env.example  .eslintignore  .eslintrc.json  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DESIGN_SYSTEM.md  LICENSE  README.md  SECURITY.md  capacitor.config.ts  cefr_migration.sql  clerk-email-template.html  content_pipeline.py  drizzle.config.ts  next.config.mjs  package-lock.json  package.json  patch-seo.js  playwright.config.ts  prompt_maker.py  scratch_fill_missing.js  scratch_lang_modal.js  scratch_migrate.ts  sentry.edge.config.ts  sentry.server.config.ts  supabase_rls_policies.sql  tailwind.config.ts  temp.txt  test_output.txt  tsc-output.txt  typescript-errors.txt  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
docs/: 2026-04-14-atomic-input-design.md
drizzle/: 0000_hot_grim_reaper.sql  0001_cynical_sally_floyd.sql  0002_clammy_infant_terrible.sql  0003_mute_fat_cobra.sql  0004_add_daily_stats_unique.sql  0005_wet_rafael_vega.sql  0006_strong_logan.sql  0007_messy_maestro.sql
installer/: README.md  index.html  package-lock.json  package.json
installer-app/: index.html  package-lock.json  package.json  vite.config.ts
installer/src-tauri/: Cargo.toml  tauri.conf.json
installer/src-tauri/capabilities/: default.json
installer/src-tauri/icons/: icon.icns
installer/src-tauri/src/: lib.rs  main.rs
messages/: ar.json  de.json  en.json  es.json  fr.json  hi.json  it.json  ja.json  pt.json  uk.json
migrations/: add_streak_and_powerups.sql  add_total_xp.sql  language_centric_refactor.sql  language_standardization.sql  (+2 more)
public/: robots.txt  (+2 more)
(+395 files in other folders)
