[package]
name = "myduolingo-installer"
version = "0.1.0"
description = "MyDuolingo Installer"
authors = ["Miguel Santos"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full", "time"] }
tauri-plugin-shell = "2.0.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3.32"
